[gd_scene load_steps=109 format=3 uid="uid://dndhjrpi143t1"]

[ext_resource type="Script" path="res://actor.gd" id="1_mqx5s"]
[ext_resource type="Texture2D" uid="uid://bwn7bhryvcjdj" path="res://png/Old Town - Citizens v0.1/Masc. Citizens/Artun/Artun.png" id="1_vvige"]
[ext_resource type="Script" path="res://addons/simple_shapes/shapes/RectangleShape.gd" id="3_6ct78"]
[ext_resource type="Script" path="res://addons/simple_shapes/shapes/CircleShape.gd" id="3_bf10c"]
[ext_resource type="Texture2D" uid="uid://dt8itggpk0fdx" path="res://png/Old Town - Citizens v0.1/Masc. Citizens/Artun/Artun_Combat.png" id="4_4u2d2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tu7ve"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 288, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dqtg"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 288, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmlmg"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 288, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw1pv"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 288, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jspvy"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l8a2"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1dda"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kya7k"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu2a1"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ybku"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsuu8"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wjwl"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad8u3"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 304, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uc6k"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 304, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuaik"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 304, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eakyw"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 304, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhy46"]
atlas = ExtResource("1_vvige")
region = Rect2(0, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_golu5"]
atlas = ExtResource("1_vvige")
region = Rect2(16, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouu0j"]
atlas = ExtResource("1_vvige")
region = Rect2(32, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqtj2"]
atlas = ExtResource("1_vvige")
region = Rect2(48, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_somxr"]
atlas = ExtResource("1_vvige")
region = Rect2(0, 400, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ut25k"]
atlas = ExtResource("1_vvige")
region = Rect2(16, 400, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4be74"]
atlas = ExtResource("1_vvige")
region = Rect2(32, 400, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh6ou"]
atlas = ExtResource("1_vvige")
region = Rect2(48, 400, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yav48"]
atlas = ExtResource("1_vvige")
region = Rect2(0, 384, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrd8d"]
atlas = ExtResource("1_vvige")
region = Rect2(16, 384, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t30ao"]
atlas = ExtResource("1_vvige")
region = Rect2(32, 384, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bso6r"]
atlas = ExtResource("1_vvige")
region = Rect2(48, 384, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gx15"]
atlas = ExtResource("1_vvige")
region = Rect2(0, 432, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_isf6i"]
atlas = ExtResource("1_vvige")
region = Rect2(16, 432, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3i5x"]
atlas = ExtResource("1_vvige")
region = Rect2(32, 432, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2o6b"]
atlas = ExtResource("1_vvige")
region = Rect2(48, 432, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pltf6"]
atlas = ExtResource("1_vvige")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qstah"]
atlas = ExtResource("1_vvige")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpkbd"]
atlas = ExtResource("1_vvige")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsfmp"]
atlas = ExtResource("1_vvige")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_txo3n"]
atlas = ExtResource("1_vvige")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt5f4"]
atlas = ExtResource("1_vvige")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fygdr"]
atlas = ExtResource("1_vvige")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfia7"]
atlas = ExtResource("1_vvige")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccc06"]
atlas = ExtResource("1_vvige")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_61js3"]
atlas = ExtResource("1_vvige")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_swyrv"]
atlas = ExtResource("1_vvige")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rltc"]
atlas = ExtResource("1_vvige")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsljy"]
atlas = ExtResource("1_vvige")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7ol6"]
atlas = ExtResource("1_vvige")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mwi5"]
atlas = ExtResource("1_vvige")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w0qb"]
atlas = ExtResource("1_vvige")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_asyy1"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_exsln"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kk3q"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_132ok"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0bnb"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkc5y"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0s05"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yylc"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w3oa"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_74fub"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5sss"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e21v"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3xpn"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj41a"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_svjv5"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_68ay3"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_44xdq"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rasxo"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmc4"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u802"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kojf"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ihcf"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ts"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8ekt"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_os1ko"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j88hf"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bieta"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt3pn"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxymm"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbsjo"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsikv"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg8jc"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ecda"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip0m8"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwq6y"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8li62"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5egb"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5878"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3iru"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ismg"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0202"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7nxl"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1hfh"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m76ln"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fglia"]
atlas = ExtResource("4_4u2d2")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lajdh"]
atlas = ExtResource("4_4u2d2")
region = Rect2(16, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw4db"]
atlas = ExtResource("4_4u2d2")
region = Rect2(32, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3shr"]
atlas = ExtResource("4_4u2d2")
region = Rect2(48, 112, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8si4n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu7ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dqtg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmlmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw1pv")
}],
"loop": false,
"name": &"block down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jspvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l8a2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1dda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kya7k")
}],
"loop": false,
"name": &"block left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu2a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ybku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsuu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wjwl")
}],
"loop": false,
"name": &"block right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad8u3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uc6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuaik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eakyw")
}],
"loop": false,
"name": &"block up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhy46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_golu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouu0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqtj2")
}],
"loop": false,
"name": &"die down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_somxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ut25k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4be74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh6ou")
}],
"loop": false,
"name": &"die left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yav48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrd8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t30ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bso6r")
}],
"loop": false,
"name": &"die right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gx15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isf6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3i5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2o6b")
}],
"loop": false,
"name": &"die up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pltf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qstah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpkbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsfmp")
}],
"loop": true,
"name": &"idle down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_txo3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt5f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fygdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfia7")
}],
"loop": true,
"name": &"idle left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccc06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61js3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swyrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rltc")
}],
"loop": true,
"name": &"idle right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsljy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7ol6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mwi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w0qb")
}],
"loop": true,
"name": &"idle up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_asyy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exsln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kk3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_132ok")
}],
"loop": false,
"name": &"shoot down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0bnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkc5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0s05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yylc")
}],
"loop": false,
"name": &"shoot left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w3oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74fub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5sss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e21v")
}],
"loop": false,
"name": &"shoot right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3xpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj41a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svjv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68ay3")
}],
"loop": false,
"name": &"shoot up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44xdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rasxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u802")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kojf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ihcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8ekt")
}],
"loop": false,
"name": &"swing down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_os1ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j88hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bieta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt3pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxymm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbsjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsikv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg8jc")
}],
"loop": false,
"name": &"swing left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ecda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip0m8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwq6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8li62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5egb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5878")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3iru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ismg")
}],
"loop": false,
"name": &"swing right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0202")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7nxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1hfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m76ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fglia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lajdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw4db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3shr")
}],
"loop": false,
"name": &"swing up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2vrl"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_we7pd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ActiveCircle:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ActiveCircle:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yngls"]
resource_name = "activate"
length = 0.66
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActiveCircle:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.33, 0.66),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 0.498039), Color(1, 0, 0, 1), Color(1, 0, 0, 0.498039)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ActiveCircle:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.33, 0.66),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 16, 0]
}

[sub_resource type="Animation" id="Animation_jsg65"]
resource_name = "damage"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.982391, 0, 0.0395406, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_smeww"]
resource_name = "block"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u6hrr"]
_data = {
"RESET": SubResource("Animation_we7pd"),
"activate": SubResource("Animation_yngls"),
"block": SubResource("Animation_smeww"),
"damage": SubResource("Animation_jsg65")
}

[node name="Actor" type="CharacterBody2D"]
z_index = 2
y_sort_enabled = true
input_pickable = true
script = ExtResource("1_mqx5s")

[node name="HighlightBox" type="Polygon2D" parent="."]
visible = false
color = Color(0, 1, 1, 0.235294)
offset = Vector2(-8, -8)
polygon = PackedVector2Array(0, 0, 16, 0, 16, 16, 0, 16)
script = ExtResource("3_6ct78")
size = Vector2(16, 16)

[node name="ActiveCircle" type="Polygon2D" parent="."]
color = Color(1, 0, 0, 0.243137)
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
script = ExtResource("3_bf10c")
radius = 0
points_num = 60

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_8si4n")
animation = &"idle right"
autoplay = "idle right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_g2vrl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u6hrr")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
